unpackaged/main/default/objects/Account/fields/Open_New_Applications__c.field-meta.xml
<CustomField>
    <fullName>Open_New_Applications__c</fullName>
    <description>Rolls up the number of open new applications for this site.</description>
    <inlineHelpText>Rolls up the number of open new applications for this site.</inlineHelpText>
    <label>Open New Applications</label>
    <summaryFilterItems>
        <field>Application__c.Application_Type__c</field>
        <operation>equals</operation>
        <value>New</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Application__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Applications</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Application__c.Stage__c</field>
        <operation>notEqual</operation>
        <value>Certification</value>
    </summaryFilterItems>
    <summaryForeignKey>Application__c.Site__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>