unpackaged/main/default/objects/Account/fields/Other_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Account_Type__c</fullName>
    <description>This field holds the value for another Company Type that is not mentioned within the Company Type Picklist</description>
    <label>Other Company Type</label>
    <type>TextArea</type>
</CustomField>