unpackaged/main/default/objects/Account/fields/Other_Animals__c.field-meta.xml
<CustomField>
    <fullName>Other_Animals__c</fullName>
    <description>What other animals are there on the same site that will not be RSPCA Assured?</description>
    <inlineHelpText>Other non-assured animals on the same site</inlineHelpText>
    <label>Other Animals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>