unpackaged/main/default/objects/Account/fields/Outcome_Approved_By_Certifier__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Approved_By_Certifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outcome Approved By (Certifier)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>