unpackaged/main/default/objects/Account/fields/P_P_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>P_P_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who the account manager is for the supporter</description>
    <inlineHelpText>Who the account manager is for the supporter</inlineHelpText>
    <label>Partnerships Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Partnerships</relationshipLabel>
    <relationshipName>Accounts5</relationshipName>
    <type>Lookup</type>
</CustomField>