unpackaged/main/default/objects/Account/fields/P_P_On_Hold_Closed_Notes__c.field-meta.xml
<CustomField>
    <fullName>P_P_On_Hold_Closed_Notes__c</fullName>
    <description>Notes as to why the record status was closed or put on hold</description>
    <inlineHelpText>Notes as to why the record status was closed or put on hold</inlineHelpText>
    <label>Partnerships On Hold / Closed Notes</label>
    <type>TextArea</type>
</CustomField>