unpackaged/main/default/objects/Account/fields/P_P_Record_Status__c.field-meta.xml
<CustomField>
    <fullName>P_P_Record_Status__c</fullName>
    <description>P and P record status</description>
    <inlineHelpText>If choosing on hold or closed then add on hold / closed reason.</inlineHelpText>
    <label>Partnerships Record Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Won (Closed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>