unpackaged/main/default/objects/Account/fields/Pig_Discount_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Pig_Discount_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pig Discount Eligibility</label>
    <type>Checkbox</type>
</CustomField>