unpackaged/main/default/objects/Account/fields/Pork__c.field-meta.xml
<CustomField>
    <fullName>Pork__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pork</label>
    <type>Checkbox</type>
</CustomField>