unpackaged/main/default/objects/Account/fields/Previous_Membership__c.field-meta.xml
<CustomField>
    <fullName>Previous_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Membership</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transferred Memberships</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>