unpackaged/main/default/objects/Account/fields/Primary_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Full_Name__c</fullName>
    <formula>Primary_Contact__r.FirstName &amp; &quot; &quot; &amp; Primary_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Full Name</label>
    <type>Text</type>
</CustomField>