unpackaged/main/default/objects/Account/fields/Primary_Contact_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Salutation__c</fullName>
    <formula>TEXT(Primary_Contact__r.Salutation)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Salutation</label>
    <type>Text</type>
</CustomField>