unpackaged/main/default/objects/Account/fields/Product_Detail__c.field-meta.xml
<CustomField>
    <fullName>Product_Detail__c</fullName>
    <label>Product Detail</label>
    <type>TextArea</type>
</CustomField>