unpackaged/main/default/objects/Account/fields/Project_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Project_Involvement__c</fullName>
    <description>Are they working with us on projects - i.e. research, campaigns, fundraising, gift</description>
    <inlineHelpText>Are they working with us on projects - i.e. research, campaigns, fundraising, gift</inlineHelpText>
    <label>Project Involvement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>