unpackaged/main/default/objects/Account/fields/Project_Notes__c.field-meta.xml
<CustomField>
    <fullName>Project_Notes__c</fullName>
    <description>Project description brief notes</description>
    <inlineHelpText>Project description brief notes</inlineHelpText>
    <label>Project Notes</label>
    <type>TextArea</type>
</CustomField>