unpackaged/main/default/objects/Account/fields/Reason_for_Status__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Status__c</fullName>
    <label>Reason for Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-compliant</fullName>
            </value>
            <value>
                <fullName>Non-payment</fullName>
            </value>
            <value>
                <fullName>Non-receipt of evidence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>