unpackaged/main/default/objects/Account/fields/Reason_for_Suspension__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Suspension__c</fullName>
    <description>Additional long text field for users to populate the reason for suspension, if it is not already listed.</description>
    <inlineHelpText>Please populate if the reason for suspension is not listed on the picklist.</inlineHelpText>
    <label>Other Reason for Suspension</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>