unpackaged/main/default/objects/Account/fields/Reason_For_Suspension_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Suspension_Picklist__c</fullName>
    <description>Complaint; Incident; Assessment; Monitoring Visit; Evidence Not Returned; Other</description>
    <label>Reason For Suspension</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Incident</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>Monitoring Visit</fullName>
            </value>
            <value>
                <fullName>Evidence Not Returned</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>