unpackaged/main/default/objects/Account/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <description>Renewal Date is 2 months before Membership Expiry Date.</description>
    <formula>ADDMONTHS(Membership_Expiry_Date__c,-2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Renewal Date is 2 months before Membership Expiry Date.</inlineHelpText>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>