unpackaged/main/default/objects/Account/fields/Renewal_Reminder_Ready__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Reminder_Ready__c</fullName>
    <formula>Latest_Renewal_Price_Date_For__c =  Membership_Expiry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Reminder Ready</label>
    <type>Checkbox</type>
</CustomField>