unpackaged/main/default/objects/Account/fields/RenewalPriceReportBatchDate__c.field-meta.xml
<CustomField>
    <fullName>RenewalPriceReportBatchDate__c</fullName>
    <formula>X6_Week_Renewal_Scheduled_Date__c  -3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RenewalPriceReportBatchDate</label>
    <type>Date</type>
</CustomField>