unpackaged/main/default/objects/Account/fields/Request_for_Suspension__c.field-meta.xml
<CustomField>
    <fullName>Request_for_Suspension__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this site is under suspension. An email will automatically send for suspension approval.</inlineHelpText>
    <label>Request for Suspension</label>
    <type>Checkbox</type>
</CustomField>