unpackaged/main/default/objects/Account/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if this account is an organisation involved in food retail including supermarkets, restaurants, caterers and wholesalers.</description>
    <inlineHelpText>Check this box if this account is an organisation involved in food retail including supermarkets, restaurants, caterers and wholesalers.</inlineHelpText>
    <label>Retailer</label>
    <type>Checkbox</type>
</CustomField>