unpackaged/main/default/objects/Account/fields/Retailer_Type__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Type__c</fullName>
    <label>Retailer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Butcher</fullName>
            </value>
            <value>
                <fullName>Cafe</fullName>
            </value>
            <value>
                <fullName>Canteen</fullName>
            </value>
            <value>
                <fullName>Caterer</fullName>
            </value>
            <value>
                <fullName>Catering butcher</fullName>
            </value>
            <value>
                <fullName>Convenience store</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Farm shop</fullName>
            </value>
            <value>
                <fullName>Restaurant</fullName>
            </value>
            <value>
                <fullName>Supermarket</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>