unpackaged/main/default/objects/Account/fields/Sage_50_Customer_A_C__c.field-meta.xml
<CustomField>
    <fullName>Sage_50_Customer_A_C__c</fullName>
    <label>Sage 50 Customer A/C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>