unpackaged/main/default/objects/Account/fields/Sage_Intacct_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Sage_Intacct_Customer_Number__c</fullName>
    <displayFormat>AC{000000}</displayFormat>
    <label>Sage Intacct Customer Number</label>
    <type>AutoNumber</type>
</CustomField>