unpackaged/main/default/objects/Account/fields/SALSA_Number__c.field-meta.xml
<CustomField>
    <fullName>SALSA_Number__c</fullName>
    <description>Processor/Packers Only</description>
    <inlineHelpText>Processor/Packers Only</inlineHelpText>
    <label>SALSA Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>