unpackaged/main/default/objects/Account/fields/Same_Address_As_Head_Office__c.field-meta.xml
<CustomField>
    <fullName>Same_Address_As_Head_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the site address is the same as the head office address.</inlineHelpText>
    <label>Same Address As Head Office</label>
    <type>Checkbox</type>
</CustomField>