unpackaged/main/default/objects/Account/fields/Site_Notes__c.field-meta.xml
<CustomField>
    <fullName>Site_Notes__c</fullName>
    <label>Site Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>