unpackaged/main/default/objects/Account/fields/Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Site_Number__c</fullName>
    <inlineHelpText>4 digit membership number for site.</inlineHelpText>
    <label>Site Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>