unpackaged/main/default/objects/Account/fields/Six_Week_Renewal_Reminder_Sent__c.field-meta.xml
<CustomField>
    <fullName>Six_Week_Renewal_Reminder_Sent__c</fullName>
    <label>Renewal Invite Sent</label>
    <type>Date</type>
</CustomField>