unpackaged/main/default/objects/Account/fields/Society__c.field-meta.xml
<CustomField>
    <fullName>Society__c</fullName>
    <description>Are they partnering with RSPCA</description>
    <inlineHelpText>Are they partnering with RSPCA</inlineHelpText>
    <label>Society</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_or_No</valueSetName>
    </valueSet>
</CustomField>