unpackaged/main/default/objects/Account/fields/Suspension_Period_Lapsed__c.field-meta.xml
<CustomField>
    <fullName>Suspension_Period_Lapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticking this box wipes all suspension information from this Site&#39;s record. Please only tick if you are certain the suspension period is over.</description>
    <inlineHelpText>Ticking this box wipes all suspension information from this Site&#39;s record. Please only tick if you are certain the suspension period is over.</inlineHelpText>
    <label>Suspension Period Lapsed</label>
    <type>Checkbox</type>
</CustomField>