unpackaged/main/default/objects/Account/fields/Tax_Group__c.field-meta.xml
<CustomField>
    <fullName>Tax_Group__c</fullName>
    <label>Tax Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK customers</fullName>
            </value>
            <value>
                <fullName>General Export customers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>