unpackaged/main/default/objects/Account/fields/Transferred_Account__c.field-meta.xml
<CustomField>
    <fullName>Transferred_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox is ticked from the transfer process if the account is currently historic due transfers.</description>
    <inlineHelpText>Checkbox is ticked from the transfer process if the account is currently historic due transfers.</inlineHelpText>
    <label>Transferred Account</label>
    <type>Checkbox</type>
</CustomField>