unpackaged/main/default/objects/Account/fields/Translator_will_be_provided__c.field-meta.xml
<CustomField>
    <fullName>Translator_will_be_provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A translator will be provided to allow the assessor to complete their assessment.</description>
    <inlineHelpText>A translator will be provided to allow the assessor to complete their assessment.</inlineHelpText>
    <label>Translator will be provided</label>
    <type>Checkbox</type>
</CustomField>