unpackaged/main/default/objects/Account/fields/Value_Added__c.field-meta.xml
<CustomField>
    <fullName>Value_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Value Added</label>
    <type>Checkbox</type>
</CustomField>