unpackaged/main/default/objects/Account/fields/What3Words__c.field-meta.xml
<CustomField>
    <fullName>What3Words__c</fullName>
    <label>What3Words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>