unpackaged/main/default/objects/Account/fields/X2_Week_Renewal_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>X2_Week_Renewal_Scheduled_Date__c</fullName>
    <formula>DATE(YEAR(ADDMONTHS(Membership_Expiry_Date__c, -1)), MONTH(ADDMONTHS(Membership_Expiry_Date__c, -1)), 02)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2 Week Renewal Scheduled Date</label>
    <type>Date</type>
</CustomField>