unpackaged/main/default/objects/Account/fields/X6_Week_Renewal_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>X6_Week_Renewal_Scheduled_Date__c</fullName>
    <formula>DATE(YEAR(ADDMONTHS(Membership_Expiry_Date__c, -2)), MONTH(ADDMONTHS(Membership_Expiry_Date__c, -2)), 01)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>6 Week Renewal Scheduled Date</label>
    <type>Date</type>
</CustomField>