unpackaged/main/default/objects/Account/recordTypes/Certification_Body.recordType-meta.xml
<RecordType>
    <fullName>Certification_Body</fullName>
    <active>false</active>
    <description>Organisations involved in the auditing of food and farming businesses.</description>
    <label>Certification Body</label>
</RecordType>