unpackaged/main/default/objects/Account/recordTypes/Head_Office.recordType-meta.xml
<RecordType>
    <fullName>Head_Office</fullName>
    <active>true</active>
    <description>An Account representing the head office.</description>
    <label>Head Office</label>
</RecordType>