unpackaged/main/default/objects/Account/recordTypes/Retailer.recordType-meta.xml
<RecordType>
    <fullName>Retailer</fullName>
    <active>false</active>
    <description>Organisations involved in food retail including supermarkets, restaurants, caterers and wholesalers.</description>
    <label>Retailer</label>
</RecordType>