unpackaged/main/default/objects/Account/recordTypes/Site.recordType-meta.xml
<RecordType>
    <fullName>Site</fullName>
    <active>true</active>
    <description>An Account representing a site.</description>
    <label>Site</label>
</RecordType>