unpackaged/main/default/objects/Account/validationRules/Cancellation_Reason_Other.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Reason_Other</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(Cancellation_Reason__c) = &#39;Other&#39;  &amp;&amp; ISBLANK(Other_Cancellation_Reason__c)</errorConditionFormula>
    <errorDisplayField>Other_Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Please specify the Cancellation Reason.</errorMessage>
</ValidationRule>