unpackaged/main/default/objects/Account/validationRules/Cert_Extension_Request_pending.validationRule-meta.xml
<ValidationRule>
    <fullName>Cert_Extension_Request_pending</fullName>
    <active>true</active>
    <errorConditionFormula>Certificate_Extension_Request_Pending__c  &gt; 1</errorConditionFormula>
    <errorMessage>You can&#39;t have more than one Certificate Extension Request pending!</errorMessage>
</ValidationRule>