unpackaged/main/default/objects/Account/validationRules/Company_Type_Detail.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_Type_Detail</fullName>
    <active>true</active>
    <description>If Company Type is populated, Company Type Detail should also be populated</description>
    <errorConditionFormula>ISPICKVAL(Company_Type_Detail__c, &quot;&quot;) &amp;&amp;
 NOT(ISPICKVAL(Company_Type__c, &quot;&quot;)) &amp;&amp;
					( RecordType.DeveloperName = &quot;Site&quot; || 
						 RecordType.DeveloperName = &quot;Head_Office&quot;)</errorConditionFormula>
    <errorDisplayField>Company_Type_Detail__c</errorDisplayField>
    <errorMessage>Please populate this field.</errorMessage>
</ValidationRule>