unpackaged/main/default/objects/Account/validationRules/Head_Office_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Head_Office_Number_Validation</fullName>
    <active>true</active>
    <description>Input must be an integer value.</description>
    <errorConditionFormula>IF(NOT(ISBLANK( Head_Office_Number__c )),NOT(ISNUMBER( Head_Office_Number__c )), false)</errorConditionFormula>
    <errorDisplayField>Head_Office_Number__c</errorDisplayField>
    <errorMessage>Head Office Number can only contain numbers.</errorMessage>
</ValidationRule>