unpackaged/main/default/objects/Account/validationRules/Head_Office_Record_Type_Lead_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Head_Office_Record_Type_Lead_Conversion</fullName>
    <active>true</active>
    <description>Validates lead conversion to head office record type.</description>
    <errorConditionFormula>IF(
   TEXT(LeadToAccountRecordType__c)=&quot;Head Office&quot;  &amp;&amp;  NOT( RecordType.DeveloperName  = &quot;Head_Office&quot;),true,false  )</errorConditionFormula>
    <errorMessage>The enquiry account type is &#39;Head Office&#39;, please select the Head Office record type for converting this enquiry.</errorMessage>
</ValidationRule>