unpackaged/main/default/objects/Account/validationRules/If_Retailer_Provide_Retailer_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Retailer_Provide_Retailer_Type</fullName>
    <active>true</active>
    <description>If the Retailer checkbox has been ticked, the user should populate the type of retailer from the picklist.</description>
    <errorConditionFormula>Retailer__c = TRUE</errorConditionFormula>
    <errorDisplayField>Retailer_Type__c</errorDisplayField>
    <errorMessage>Please select the type of retailer from the list.</errorMessage>
</ValidationRule>