unpackaged/main/default/objects/Account/validationRules/Only_1_Open_New_Aplication.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_1_Open_New_Aplication</fullName>
    <active>false</active>
    <description>Can only have 1 open new application.</description>
    <errorConditionFormula>Open_New_Applications__c  &gt; 1</errorConditionFormula>
    <errorMessage>Cannot have more than one open New Application.</errorMessage>
</ValidationRule>