unpackaged/main/default/objects/Account/validationRules/Only_1_Open_Renewal_Aplication.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_1_Open_Renewal_Aplication</fullName>
    <active>false</active>
    <description>Can only have 1 open renewal application.</description>
    <errorConditionFormula>Open_Renewal_Applications__c  &gt; 1</errorConditionFormula>
    <errorMessage>Cannot have more than one open Renewal Application.</errorMessage>
</ValidationRule>