unpackaged/main/default/objects/Account/validationRules/Only_1_Open_Transfer_Aplication.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_1_Open_Transfer_Aplication</fullName>
    <active>true</active>
    <description>Can only have 1 open transfer application.</description>
    <errorConditionFormula>Open_Transfer_Applications__c  &gt; 1</errorConditionFormula>
    <errorMessage>Cannot have more than one open Transfer Application.</errorMessage>
</ValidationRule>