unpackaged/main/default/objects/Account/validationRules/Phone_number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_validation</fullName>
    <active>true</active>
    <description>Validation rule used to validate the phone number.</description>
    <errorConditionFormula>NOT(REGEX(Phone, &quot;[0-9+\\-\\(\\)\\s]*&quot;))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Please enter a valid phone number.</errorMessage>
</ValidationRule>