unpackaged/main/default/objects/Account/validationRules/Populate_Other_Account_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Populate_Other_Account_Type</fullName>
    <active>true</active>
    <description>This rule is fired when &#39;Company Type&#39; is not populated when &quot;Other&quot; is chosen as a value for &#39;Company Type&#39;</description>
    <errorConditionFormula>AND(
ISPICKVAL(Company_Type_Detail__c, &quot;Other&quot;),
         ISPICKVAL(Company_Type__c, &quot;Other&quot;),  
	 ISBLANK(Other_Account_Type__c ))</errorConditionFormula>
    <errorDisplayField>Company_Type_Detail__c</errorDisplayField>
    <errorMessage>Please enter more details on the type of company</errorMessage>
</ValidationRule>